tests/basic.test
[case zeros]
import numpy as np
a = np.zeros(1)
b = np.zeros((1,2))

reveal_type(a)
reveal_type(b)
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'


[case zeros_1]
import numpy as np
a = np.zeros([1,2])
b = np.zeros([1 for _ in range(2+2)])
reveal_type(a)
reveal_type(b)
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, Any]'


[case zeros_2]
import numpy as np
a = np.zeros(1, dtype=int)
b = np.zeros(1, dtype='int')
c = np.zeros(1, dtype='i')
reveal_type(a)
reveal_type(b)
reveal_type(c)
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'


[case indexing_0]
import numpy as np
a = np.zeros(10, dtype='int')
b = np.zeros((10, 10))

reveal_type(b[0])
reveal_type(b[0,0])
reveal_type(b[a])
reveal_type(b[:, :])
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:6: error: Revealed type is 'builtins.float'
main:7: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'

[case empty_like]
import numpy as np
a = np.zeros(10)
b = np.empty_like(a)
c = np.empty_like(a, dtype=bool)
d = np.arange(10, dtype=np.int64)
reveal_type(b)
reveal_type(c)
reveal_type(d)
[out]
main:6: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD*]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.OneD*]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'


[case array_constructor]
import numpy as np
import itertools
N = 10
l = [(i, i) for i in range(N)]
pairs = np.array(l)
reveal_type(l)
reveal_type(pairs)
[out]
main:6: error: Revealed type is 'builtins.list[Tuple[builtins.int*, builtins.int*]]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.TwoD]'


[case reshape]
import numpy as np
a = np.zeros((2,2,2))
reveal_type(np.reshape(a, order='C', newshape=(1,1)))
reveal_type(np.reshape(a, 1))
reveal_type(np.reshape(a, -1))
reveal_type(a.reshape(order='C', shape=(1,1)))
reveal_type(a.reshape(1))
reveal_type(a.reshape(-1))
reveal_type(a.reshape((1,1)))
[out]
main:3: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:4: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:9: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'

[case vstack]
import numpy as np
a = np.zeros(10)
b = np.zeros((10, 10))
reveal_type(np.vstack((a, a)))
reveal_type(np.vstack((b, b)))
np.vstack((a, b))
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'
main:6: error: Cannot infer type argument 2 of "vstack"


[case astype]
import numpy as np
a = np.zeros(10)
b = a.astype('bool')
reveal_type(b)
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.OneD*]'
